# scrapy-redis-httpcache

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: workflow.yml
src/scrapy_redis_httpcache/: __init__.py  httpcache.py
