[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapy-redis-httpcache"
version = "1.0.2"
authors = [{ "name" = "Stefano Fusai", "email" = "stefanofusai@gmail.com" }]
description = "A simple package to cache Scrapy responses in Redis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["redis", "scrapy"]

[project.urls]
Homepage = "https://github.com/stefanofusai/scrapy-redis-httpcache"
Repository = "https://github.com/stefanofusai/scrapy-redis-httpcache"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D100", "D104", "D203", "D213", "ISC001"]
