[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapy-redis-httpcache"
version = "1.1.1"
authors = [{ "name" = "Stefano Fusai", "email" = "stefanofusai@gmail.com" }]
description = "Cache Scrapy responses with Redis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["redis", "scrapy"]

[project.urls]
Homepage = "https://github.com/stefanofusai/scrapy-redis-httpcache"
Repository = "https://github.com/stefanofusai/scrapy-redis-httpcache"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Bad rules
    "COM812",
    "D203",
    "D212",
    "E501",
    "FA102",
    "FIX",
    "ISC001",
    "PLR2004",
    "RUF012",
    "S101",
    "S311",
    "TD001",
    "TD002",
    "TD003",
    "TRY003",
    # Project-specific rules
    "D100",
    "D104"
]
