[project]
name = "scrapy-redis-httpcache"
version = "1.2.1"
description = "Cache Scrapy responses with Redis."
readme = "README.md"
authors = [
    { name = "Stefano Fusai", email = "stefanofusai@gmail.com" }
]
maintainers = [
    { name = "Stefano Fusai", email = "stefanofusai@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "redis==5.2.0",
    "scrapy==2.12.0",
]

[project.urls]
Homepage = "https://github.com/stefanofusai/scrapy-redis-httpcache"
Repository = "https://github.com/stefanofusai/scrapy-redis-httpcache"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
development = [
    "mypy>=1.13.0",
    "pre-commit==4.0.1",
    "ruff==0.8.2",
    "types-redis>=4.6.0.20241004",
]

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Bad rules
    "COM812",
    "D203",
    "D212",
    "E501",
    "FA102",
    "FIX",
    "ISC001",
    "PLR2004",
    "RUF012",
    "S101",
    "S311",
    "TD001",
    "TD002",
    "TD003",
    "TRY003",
    # Project-specific rules
    "D100",
    "D104"
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
